# py-async-notification-service

./: .env.example  .gitignore  README.md  dev-requirements.txt  notifications.db  pyproject.toml  requirements.txt
app/: main.py
app/api/: logs.py  notify.py
app/config/: settings.py
app/db/: session.py
app/models/: log.py  schema.py
app/queue/: rabbitmq.py
app/services/: email_service.py  logger.py  push_service.py  sms_service.py
app/utils/: retry.py
app/workers/: worker.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
tests/: test_notify.py
