[tool.poetry]
name = "async-notification-service"
version = "0.1.0"
description = "Asynchronous notification service using FastAPI, RabbitMQ, and aio-pika"
authors = ["Vardhaman Ayyagar ayyagari.vardhu@gmail.com"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
aio-pika = "^9.4.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
email-validator = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
httpx = "^0.27.0"
